--- a/src/components/ShopBasket/ShopBasket.scss
+++ b/src/components/ShopBasket/ShopBasket.scss
@@ -1,10 +1,12 @@
 .shop__basket {
   max-width: 160px;
   width: 100%;
-  padding: 8px;
+  padding: 4px;
   height: 40px;
   color: #000000;
   border-radius: 4px;
+  font-family: "Kaushan Script", cursive;
+  font-size: 20px;
   border: 1px solid #000000;
   background-color: transparent;
   cursor: pointer;
